# AndroidWM

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/watermark/sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/watermark/sample/: MainActivity.java
app/src/test/java/com/watermark/sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
watermark/: build.gradle
watermark/src/androidTest/java/com/watermark/: ExampleInstrumentedTest.kt
watermark/src/main/: AndroidManifest.xml
watermark/src/main/cpp/: CMakeLists.txt  Watermark.cpp
watermark/src/main/java/com/watermark/: Watermark.java  WatermarkBuilder.java  WatermarkDetector.java
watermark/src/main/java/com/watermark/bean/: AsyncTaskParams.java  WatermarkImage.java  WatermarkPosition.java  WatermarkText.java
watermark/src/main/java/com/watermark/listener/: BuildFinishListener.java  DetectFinishListener.java
watermark/src/main/java/com/watermark/task/: DetectionReturnValue.java  FDDetectionTask.java  FDWatermarkTask.java  LSBDetectionTask.java  LSBWatermarkTask.java
watermark/src/main/java/com/watermark/utils/: BitmapUtils.java  Constant.java  FastDctFft.java  Fft.java  StringUtils.java
watermark/src/test/java/com/watermark/: ExampleUnitTest.kt
